# dxkuma-bot

./: .gitignore  README.md  config_example.toml  example.conf  pylock.toml  pyproject.toml  requirements.txt  start.py
plugins/bot/block_nsfw/: __init__.py
plugins/bot/clean_cache/: __init__.py
plugins/bot/concurrent_lock/: __init__.py  util.py
plugins/bot/conversation/: __init__.py
plugins/bot/except_log/: __init__.py
plugins/bot/gen_avatar/: __init__.py
plugins/bot/handle_lock/: __init__.py
plugins/bot/help/: __init__.py
plugins/bot/new_member/: __init__.py
plugins/bot/new_member_avatar/: __init__.py
plugins/bot/ping/: __init__.py
plugins/bot/poke/: __init__.py
plugins/bot/random_pic/: __init__.py
plugins/bot/repeater/: __init__.py  config.py
plugins/gallery/block_nsfw/: __init__.py
plugins/gallery/random_bvid/: __init__.py  database.py
plugins/gallery/random_pic/: __init__.py  rule.py
plugins/gallery/rank/: __init__.py  database.py
plugins/interaction/conversation/: __init__.py
plugins/interaction/help/: __init__.py
plugins/interaction/llm/: __init__.py  database.py  tasks.py  utils.py
plugins/interaction/poke/: __init__.py
plugins/interaction/repeater/: __init__.py  config.py  rule.py
plugins/interaction/tts/: __init__.py
plugins/interaction/xcrease/: __init__.py
plugins/maimai/maiQueue/: __init__.py  database.py  utils.py
plugins/maimai/maiWordle/: GLOBAL_CONSTANT.py  __init__.py  database.py  ranking.py  times.py  utils.py
plugins/maimai/maimaiDX/: Config.py  GenB50.py  GenBests.py  MusicInfo.py  __init__.py
plugins/maimai/prober/: Config.py  DivingFish.py  Draw.py  GLOBAL_CONSTANT.py  GenBests.py  MusicInfo.py  __init__.py  bests_gen.py  database.py  diving_fish.py  info_gen.py  (+2 more)
util/: Config.py  Data.py  DivingFish.py  Draw.py  Rule.py  config.py  data.py  database.py  exceptions.py  lock.py  patch.py  permission.py  resources.py  rule.py  stars.py
(+18 files in other folders)
